Add service section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navContainer">
             <ul>
                 <li><a href="#homeContent">Home</a></li>
-                <li><a href="#">Our Services</a></li>
+                <li><a href="#services">Our Services</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Our Projects</a></li>
                 <li><a href="#">Our Team</a></li>
@@ -40,6 +40,68 @@
 <img src="images/Screenshot 2023-08-07 000353.png">
     </div>
 </div>
+<section>
+    <div id="services">
+        <h2>~~ Our Services ~~</h2>
+        <p>
+            We are proud to offer the services listed below to our customers.All services are legit and are embended with the 
+            current technologies.<br>Our team is focused on ensuring customer sertisfaction and our customers have nothing to worry about<br> but take advantage of the services.
+        </p>
+        <div class="servicesHolder">
+            <div id="internet">
+                <img src="images/Screenshot 2023-08-07 001346.png"><h3>Internet Services:</h3>
+                <p>Golden Networks offers high-speed and reliable internet connections for both residential and
+                    business customers.We leverage the latest technologies to ensure uninterrupted connectivity 
+                    and exceptional browsingexperiences.<br><br><a href="#">Continue reading ></a>
+                </p>
+            </div>
+            <div id="cctv">
+                <img src="images/Screenshot 2023-08-07 155017.png"><h3>CCTV Installation:</h3>
+                <p>
+                    Our skilled technicians provide
+                    professional CCTV installation services to enhance security
+                    and surveillance for homes,businesses,and public spaces.<br><br><a href="#">Continue reading ></a>
+                </p>
+            </div>
+            <div id="web">
+                <img src="images/Screenshot 2023-08-07 155436.png"><h3>Website Development and Hosting:</h3>
+                <p>
+                    Golden Networks specializes increating visually appealing and functional
+                    websites for businesses,along with reliable hosting solutions.<br><br><a href="#">Continue reading ></a>
+                </p>
+            </div>
+            <div id="electrial">
+                <img src="images/Screenshot 2023-08-07 155631.png"><h3>Electrical and Electric Works:</h3>
+                <p>
+                    We offer electrical installation and repair services to meet residential and
+                    commercial needs,ensuring safety and compliance.<br><br><a href="#">Continue reading ></a>
+                </p>
+            </div>
+            <div id="solar">
+                <img src="images/Screenshot 2023-08-07 155810.png"><h3>Solar Panel Installation:</h3>
+                <p>
+                    With a commitment to renewable energy,we provide solar panel installation
+                    services to promote sustainable power solutions.<br><br><a href="#">Continue reading ></a>
+                </p>
+            </div>
+            <div id="gadgets">
+                <img src="images/Screenshot 2023-08-07 160042.png"><h3>Internet Equipment and Gadgets:</h3>
+                <p>
+                    Golden Networks offers a wide range of high-quality internet equipment
+                    and gadgets to cater for various connectivity needs.<br><br><a href="#">Continue reading ></a>
+                </p>
+            </div>
+            <div id="telecommunication">
+                <img src="images/Screenshot 2023-08-07 160147.png"><h3>Telecommunication and Networking Services:</h3>
+                <p>
+                    Our expertise extends to providing telecommunication
+                    solutions and networking services for businesses,helping them stay connected and productive.
+                   <br><br><a href="#">Continue reading ></a>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 </main>
 </body>
 </html>
