Add about section. Rename index.js to script.js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#homeContent">Home</a></li>
                 <li><a href="#services">Our Services</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#aboutHolder">About Us</a></li>
                 <li><a href="#">Our Projects</a></li>
                 <li><a href="#">Our Team</a></li>
                 <li><a href="#">Contacts</a></li>
@@ -100,6 +100,23 @@
                 </p>
             </div>
         </div>
+    </div>
+</section>
+<section>
+    <!--the about section-->
+    <div id="aboutHolder">
+        <div id="aboutContent">
+            <h2>~~ About Us ~~</h2>
+            <p>
+                Golden Networks is a premier internet service provider based in Kapsabet, Nandi County,Kenya.
+                We have been at the forefront of delivering reliable and high-speed internet services, catering
+                to the digital needs of individuals and businesses in the region. With a team of experienced 
+                and dedicated professionals, we take pride in our commitment to providing exceptional services and innovative technology solutions.
+            </p>
+            <button id="CTA">Read More</button>
+        </div>
+        <div id="aboutImages">
+            <img src="images/Screenshot 2023-08-07 232112.png">
     </div>
 </section>
 </main>
