Add statistics and pricing section

--- a/index.html
+++ b/index.html
@@ -119,6 +119,75 @@
             <img src="images/Screenshot 2023-08-07 232112.png">
     </div>
 </section>
+<section>
+    <div class="statistics">
+        <!--statistics section-->
+        <div id="years">
+            <img src="images/Screenshot 2023-08-09 003154.png"><h3>20</h3>
+            <p>Years of Experience</p>
+        </div>
+        <div id="members">
+            <img src="images/Screenshot 2023-08-09 001937.png"><h3>100</h3>
+            <p>Team Members</p>
+        </div>
+        <div id="satisfied">
+            <img src="images/Screenshot 2023-08-09 002032.png"><h3>2000</h3>
+            <p>satisfied Clients</p>
+        </div>
+        <div id="projects">
+            <img src="images/Screenshot 2023-08-09 002234.png"><h3>1200</h3>
+            <p>Complete Projects</p>
+        </div>
+    </div>
+</section>
+<section>
+    <!--the pricing section-->
+    <div class="prices">
+        <h2 id="PricesHeading">Our Pricing</h2>
+        <div class="priceHolder">
+        <div id="basic">
+            <h2>$<span> 15.04   </span>/month</h2>
+            <h3>BASIC BUNDLE</h3>
+            <p>
+                <ul>
+                    <li>Affordable</li>
+                    <li>Web Hosting</li>
+                    <li>HD Streaming</li>
+                    <li>Secure Streaming</li>
+                </ul>
+            </p>
+            <button>View Plan</button>
+        </div>
+        <div id="business">
+            <h2>$<span> 60.15 </span>/month</h2>
+            <h3>BUSINESS BUNDLE</h3>
+            <p>
+                <ul>
+                    <li>Enhance Productivity</li>
+                    <li>Multiple Users</li>
+                    <li>HD Streaming</li>
+                    <li>Reliable Connectivity</li>
+                </ul>
+            </p>
+            <button>View Plan</button>
+        </div>
+        <div id="premium">
+            <h2>$<span> 353.98 </span>/month</h2>
+            <h3>PREMIUM BUNDLE</h3>
+            <p>
+                <ul>
+                    <li>Ultimate Performance</li>
+                    <li>Gaming and Multimedia</li>
+                    <li>Large Business and Home Offices</li>
+                    <li>Reliable Connectivity</li>
+                </ul>
+            </p>
+            <button>View Plan</button>
+        </div>
+        </div>
+    </div>
+    </div>
+</section>
 </main>
 </body>
 </html>
