Add projects section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#homeContent">Home</a></li>
                 <li><a href="#services">Our Services</a></li>
                 <li><a href="#aboutHolder">About Us</a></li>
-                <li><a href="#">Our Projects</a></li>
+                <li><a href="#projects2">Our Projects</a></li>
                 <li><a href="#">Our Team</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
@@ -186,6 +186,59 @@
         </div>
         </div>
     </div>
+    </div>
+</section>
+<section>
+    <!--projects section-->
+    <div id="projects2">
+        <h2>~~ Our Projects ~~</h2>
+        <h3 id="pIntro">Recently Completed Projects</h3>
+        <div class="projectsHolder">
+            <div id="first">
+                <img src="images/Screenshot 2023-08-09 173149.png">
+                <h3>Complete house electric wiring at Kabsabet.</h3>
+                <p>
+                    Our electrical technical team had the priviledge of setting up and completing
+                    the house wiring of one of our clients from Kapsabet.The full service was offered 
+                    at a very pocket friendly cost, leaving our client satisfied and looking forward 
+                    to working with us in future.<a href="#">Continue reading</a>
+                </p>
+            </div>
+            <div id="second">
+                <img src="images/Screenshot 2023-08-07 231951.png">
+                <h3>Disk set up at Baraton</h3>
+                <p>
+                    One of our clients from Baraton had his disk set up at cheap cost. We sell, deliver and 
+                    make set up the electric devices for our customers. You have nothing to worry about, our services are a phone away distance.<a href="#">Continue reading</a>
+                </p>
+            </div>
+            <div id="third">
+                <img src="images/Screenshot 2023-08-07 232218.png">
+                <h3>Internet disk set up at Kapsabet Town</h3>
+                <p>
+                    Wifi installation is one of our greatest tasks. We deliver quality services as far as internet is concerned. One of our clients took advantage of this and this was his home wifi set up at Kapsabet town.<a href="#">Continue reading</a>
+                </p>
+            </div>
+            <div id="fourth">
+                <img src="images/Screenshot 2023-08-09 173208.png">
+                <h3>CCTV Installation at Chemundu, near Baraton</h3>
+                <p>
+                    We are a mobile company and will reach you where you are. All we require is direction to your place.This is another lucky customer that had his home equiped with cctv cameras. We set up the cameras and train our clients on how to use them. <a href="#">Continue reading</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <!--testimonial section-->
+    <div id="testimonialHolder">
+        <h2>~~ Testimonial ~~</h2>
+        <p>
+            This is what our esteem customers have to say about our services.
+        </p>
+        <div id="testimonial">
+            <h3>Wilfred Mutwiri<br><span>Customer</span></h3>
+        </div>
     </div>
 </section>
 </main>
