--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <li><a href="#services">Our Services</a></li>
                 <li><a href="#aboutHolder">About Us</a></li>
                 <li><a href="#projects2">Our Projects</a></li>
-                <li><a href="#">Our Team</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#teamHolder">Our Team</a></li>
+                <li><a href="#contactsHolder">Contacts</a></li>
             </ul>
         </div>
     </nav>
@@ -27,7 +27,7 @@
 <main>
 <!--the home section-->
 <div class="homeHolder">
-    <div id="homeContent">
+    <div id="homeContent" class="reveal">
         <h1>Fast & Reliable<br> Internet Provider</h1>
         <p>Golden Networks is a leading Internet service<br>
         provider based in Kapsabet, Nandi county, Kenya.<br>
@@ -37,25 +37,25 @@
         <button id="cta2">Contact Us</button>
     </div>
     <div class="homeImage">
-<img src="images/Screenshot 2023-08-07 000353.png">
+<img src="images/Screenshot 2023-08-07 000353.png" class="reveal">
     </div>
 </div>
 <section>
-    <div id="services">
-        <h2>~~ Our Services ~~</h2>
-        <p>
+    <div  id="services">
+        <h2 class="reveal">~~ Our Services ~~</h2>
+        <p class="reveal">
             We are proud to offer the services listed below to our customers.All services are legit and are embended with the 
             current technologies.<br>Our team is focused on ensuring customer sertisfaction and our customers have nothing to worry about<br> but take advantage of the services.
         </p>
         <div class="servicesHolder">
-            <div id="internet">
+            <div id="internet" class="reveal">
                 <img src="images/Screenshot 2023-08-07 001346.png"><h3>Internet Services:</h3>
                 <p>Golden Networks offers high-speed and reliable internet connections for both residential and
                     business customers.We leverage the latest technologies to ensure uninterrupted connectivity 
                     and exceptional browsingexperiences.<br><br><a href="#">Continue reading ></a>
                 </p>
             </div>
-            <div id="cctv">
+            <div id="cctv" class="reveal">
                 <img src="images/Screenshot 2023-08-07 155017.png"><h3>CCTV Installation:</h3>
                 <p>
                     Our skilled technicians provide
@@ -63,35 +63,35 @@
                     and surveillance for homes,businesses,and public spaces.<br><br><a href="#">Continue reading ></a>
                 </p>
             </div>
-            <div id="web">
+            <div id="web" class="reveal">
                 <img src="images/Screenshot 2023-08-07 155436.png"><h3>Website Development and Hosting:</h3>
                 <p>
                     Golden Networks specializes increating visually appealing and functional
                     websites for businesses,along with reliable hosting solutions.<br><br><a href="#">Continue reading ></a>
                 </p>
             </div>
-            <div id="electrial">
+            <div id="electrial" class="reveal">
                 <img src="images/Screenshot 2023-08-07 155631.png"><h3>Electrical and Electric Works:</h3>
                 <p>
                     We offer electrical installation and repair services to meet residential and
                     commercial needs,ensuring safety and compliance.<br><br><a href="#">Continue reading ></a>
                 </p>
             </div>
-            <div id="solar">
+            <div id="solar" class="reveal">
                 <img src="images/Screenshot 2023-08-07 155810.png"><h3>Solar Panel Installation:</h3>
                 <p>
                     With a commitment to renewable energy,we provide solar panel installation
                     services to promote sustainable power solutions.<br><br><a href="#">Continue reading ></a>
                 </p>
             </div>
-            <div id="gadgets">
+            <div id="gadgets" class="reveal">
                 <img src="images/Screenshot 2023-08-07 160042.png"><h3>Internet Equipment and Gadgets:</h3>
                 <p>
                     Golden Networks offers a wide range of high-quality internet equipment
                     and gadgets to cater for various connectivity needs.<br><br><a href="#">Continue reading ></a>
                 </p>
             </div>
-            <div id="telecommunication">
+            <div id="telecommunication" class="reveal">
                 <img src="images/Screenshot 2023-08-07 160147.png"><h3>Telecommunication and Networking Services:</h3>
                 <p>
                     Our expertise extends to providing telecommunication
@@ -105,7 +105,7 @@
 <section>
     <!--the about section-->
     <div id="aboutHolder">
-        <div id="aboutContent">
+        <div  class="reveal" id="aboutContent">
             <h2>~~ About Us ~~</h2>
             <p>
                 Golden Networks is a premier internet service provider based in Kapsabet, Nandi County,Kenya.
@@ -115,11 +115,11 @@
             </p>
             <button id="CTA">Read More</button>
         </div>
-        <div id="aboutImages">
+        <div id="aboutImages" class="reveal">
             <img src="images/Screenshot 2023-08-07 232112.png">
     </div>
 </section>
-<section>
+<section class="reveal">
     <div class="statistics">
         <!--statistics section-->
         <div id="years">
@@ -142,10 +142,10 @@
 </section>
 <section>
     <!--the pricing section-->
-    <div class="prices">
-        <h2 id="PricesHeading">Our Pricing</h2>
+    <div class="prices reveal">
+        <h2 id="PricesHeading">~~ Our Pricing ~~</h2>
         <div class="priceHolder">
-        <div id="basic">
+        <div id="basic" class="reveal">
             <h2>$<span> 15.04   </span>/month</h2>
             <h3>BASIC BUNDLE</h3>
             <p>
@@ -158,7 +158,7 @@
             </p>
             <button>View Plan</button>
         </div>
-        <div id="business">
+        <div id="business" class="reveal">
             <h2>$<span> 60.15 </span>/month</h2>
             <h3>BUSINESS BUNDLE</h3>
             <p>
@@ -171,7 +171,7 @@
             </p>
             <button>View Plan</button>
         </div>
-        <div id="premium">
+        <div id="premium" class="reveal">
             <h2>$<span> 353.98 </span>/month</h2>
             <h3>PREMIUM BUNDLE</h3>
             <p>
@@ -190,11 +190,11 @@
 </section>
 <section>
     <!--projects section-->
-    <div id="projects2">
+    <div id="projects2" class="reveal">
         <h2>~~ Our Projects ~~</h2>
         <h3 id="pIntro">Recently Completed Projects</h3>
         <div class="projectsHolder">
-            <div id="first">
+            <div id="first" class="reveal">
                 <img src="images/Screenshot 2023-08-09 173149.png">
                 <h3>Complete house electric wiring at Kabsabet.</h3>
                 <p>
@@ -204,7 +204,7 @@
                     to working with us in future.<a href="#">Continue reading</a>
                 </p>
             </div>
-            <div id="second">
+            <div id="second" class="reveal">
                 <img src="images/Screenshot 2023-08-07 231951.png">
                 <h3>Disk set up at Baraton</h3>
                 <p>
@@ -212,14 +212,14 @@
                     make set up the electric devices for our customers. You have nothing to worry about, our services are a phone away distance.<a href="#">Continue reading</a>
                 </p>
             </div>
-            <div id="third">
+            <div id="third" class="reveal">
                 <img src="images/Screenshot 2023-08-07 232218.png">
                 <h3>Internet disk set up at Kapsabet Town</h3>
                 <p>
                     Wifi installation is one of our greatest tasks. We deliver quality services as far as internet is concerned. One of our clients took advantage of this and this was his home wifi set up at Kapsabet town.<a href="#">Continue reading</a>
                 </p>
             </div>
-            <div id="fourth">
+            <div id="fourth" class="reveal">
                 <img src="images/Screenshot 2023-08-09 173208.png">
                 <h3>CCTV Installation at Chemundu, near Baraton</h3>
                 <p>
@@ -231,16 +231,123 @@
 </section>
 <section>
     <!--testimonial section-->
-    <div id="testimonialHolder">
-        <h2>~~ Testimonial ~~</h2>
-        <p>
-            This is what our esteem customers have to say about our services.
-        </p>
+    <div id="testimonialHolder" class="reveal">
+        <h2>~~ Testimonials ~~</h2>
+        <p>This is what our esteem customers have to say about our services.</p>
         <div id="testimonial">
-            <h3>Wilfred Mutwiri<br><span>Customer</span></h3>
+            <h3>@Wilfred Mutwiri<br><span id="span">Customer</span></h3>
+            <p>
+                I am a proud client of the Golden Networks. These guys know how to treat their customers and their services are just awesome!. Thank you Golden Networks, am forever grateful.
+            </p>
+            <img src="images/Wilfred Passport.png">
+
+            <div id="Tbtns">
+                <button id="backBtn"><</button><button id="forwardBtn">></button>    
+            </div>
         </div>
     </div>
 </section>
+<section>
+<!--team section-->
+<div id="teamHolder" class="reveal">
+    <h2>~~ Meet Our Team ~~</h2>
+    <p id="p1">This great team works around the clock to ensure that our clients get the best services.</p>
+    <div class="team">
+        <div id="ceo" class="reveal">
+            <img src="images/Screenshot_20230810-220102.png">
+            <h4>Mike Kiplangat</h4>
+            <p>CEO & Founder</p>
+            <hr>
+            <div class="icons">
+                <div id="img1"><img src="images/Screenshot 2023-08-11 122004.png"></div>
+                <div id="img2"><img src="images/Screenshot 2023-08-11 122054.png"></div>
+                <div id="img3"><img src="images/Screenshot 2023-08-11 122127.png"></div>
+                <div id="img4"><img src="images/Screenshot 2023-08-11 122152.png"></div>
+            </div>
+        </div>
+        <div id="technical1" class="reveal">
+            <img src="images/Screenshot_20230810-220113.png">
+            <h4>Joshua Kirui</h4>
+            <p>Tecnical Team</p>
+            <hr>
+            <div class="icons">
+                <div id="img1"><img src="images/Screenshot 2023-08-11 122004.png"></div>
+                <div id="img2"><img src="images/Screenshot 2023-08-11 122054.png"></div>
+                <div id="img3"><img src="images/Screenshot 2023-08-11 122127.png"></div>
+                <div id="img3"><img src="images/Screenshot 2023-08-11 122152.png"></div>
+            </div>
+        </div>
+        <div id="technical2" class="reveal">
+            <img src="images/Screenshot_20230810-220128.png">
+            <h4>Denis Kipgetich</h4>
+            <p>Technical Team</p>
+            <hr>
+            <div class="icons">
+                <div id="img1"><img src="images/Screenshot 2023-08-11 122004.png"></div>
+                <div id="img2"><img src="images/Screenshot 2023-08-11 122054.png"></div>
+                <div id="img3"><img src="images/Screenshot 2023-08-11 122127.png"></div>
+                <div id="img3"><img src="images/Screenshot 2023-08-11 122152.png"></div>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
+<section>
+    <div id="contactsHolder" class="reveal">
+        <div id="contacts">
+        <div id="ContactImg" class="reveal">
+            <img src="images/Screenshot 2023-08-07 000033.png">
+        </div>
+        <div id="contanctForm" class="reveal">
+            <p>You need not to struggle with lack of internet connection, especially during this time and age when internet is vital.</p>
+            <h4>Get In Touch!</h4>
+            <form>
+                <input type="text" name="name" id="name" placeholder="Your Name"><br>
+                <input type="email" name="email" id="email" placeholder="Your Email"><br>
+                <input type="number" name="number" id="phone" placeholder="Phone Number"><br>
+                <input type="text" name="text" id="text" placeholder="Message"><br>
+            </form>
+            <button>Send</button>
+        </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div id="footerHolder" class="reveal">
+        <div class="footerContent">
+        <div id="info">
+            <h4>Golden Networks</h4>
+            <p>
+                Golden Networks is a leading Internet service provider based in Kapsabet, Nandi county, Kenya.We are recognized for excellence in delivering seamless connectivity advanced technology solutions and outstading customer service
+            </p>
+            <div class="goldenIcons">
+                <div id="Gimg1"><img src="images/Screenshot 2023-08-11 122004.png"></div>
+                <div id="Gimg2"><img src="images/Screenshot 2023-08-11 122054.png"></div>
+                <div id="Gimg3"><img src="images/Screenshot 2023-08-11 122127.png"></div>
+                <div id="Gimg4"><img src="images/Screenshot 2023-08-11 122152.png"></div>
+            </div>
+        </div>
+        <div id="links">
+            <ul>
+                <li><a href="#homeContent"><span>></span> Home</a></li>
+                <li><a href="#services"><span>></span> Our Services</a></li>
+                <li><a href="#aboutHolder"><span>></span> About Us</a></li>
+                <li><a href="#projects2"><span>></span> Our Projects</a></li>
+                <li><a href="#teamHolder"><span>></span> Our Team</a></li>
+                <li><a href="#contactsHolder"><span>></span> Contacts</a></li>
+            </ul>
+        </div>
+        <div id="subscribe">
+            <h4>Don't be left behind<br>Subscribe to our magazine to get updates of our services</h4>
+            <div class="subscribeInput">
+                <div><input type="email" placeholder="Enter Your Email"><br></div>
+                <div><button>Subscribe</button></div>
+            </div>
+        </div>
+        </div>
+    </div>
+</footer>
 </main>
+<script src="script.js"></script>
 </body>
 </html>
