Add homesection Js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#aboutHolder">About Us</a></li>
                 <li><a href="#projects2">Our Projects</a></li>
                 <li><a href="#teamHolder">Our Team</a></li>
-                <li><a href="#contactsHolder">Contacts</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </div>
     </nav>
@@ -27,17 +27,17 @@
 <main>
 <!--the home section-->
 <div class="homeHolder">
-    <div id="homeContent" class="reveal">
+    <div id="homeContent">
         <h1>Fast & Reliable<br> Internet Provider</h1>
         <p>Golden Networks is a leading Internet service<br>
         provider based in Kapsabet, Nandi county, Kenya.<br>
         We are recognized for our excellence in delivering seamless connectivity<br>
         advanced technology solutions and outstading customer service</p>
-        <button id="CTA">Read More</button>
-        <button id="cta2">Contact Us</button>
+        <button id="CTA"><a href="#">Read More</a></button>
+        <button id="cta2"><a href="#contanctForm">Contact Us</a></button>
     </div>
     <div class="homeImage">
-<img src="images/Screenshot 2023-08-07 000353.png" class="reveal">
+<img src="images/Screenshot 2023-08-07 000353.png">
     </div>
 </div>
 <section>
@@ -268,7 +268,7 @@
         <div id="technical1" class="reveal">
             <img src="images/Screenshot_20230810-220113.png">
             <h4>Joshua Kirui</h4>
-            <p>Tecnical Team</p>
+            <p>Technical Team</p>
             <hr>
             <div class="icons">
                 <div id="img1"><img src="images/Screenshot 2023-08-11 122004.png"></div>
@@ -313,7 +313,7 @@
     </div>
 </section>
 <footer>
-    <div id="footerHolder" class="reveal">
+    <div id="footerHolder">
         <div class="footerContent">
         <div id="info">
             <h4>Golden Networks</h4>
