add statistics functionality

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         provider based in Kapsabet, Nandi county, Kenya.<br>
         We are recognized for our excellence in delivering seamless connectivity<br>
         advanced technology solutions and outstading customer service</p>
-        <button id="CTA"><a href="#">Read More</a></button>
+        <button id="CTA"><a href="#" onclick="linkClick()">Read More</a></button>
         <button id="cta2"><a href="#contanctForm">Contact Us</a></button>
     </div>
     <div class="homeImage">
@@ -52,7 +52,7 @@
                 <img src="images/Screenshot 2023-08-07 001346.png"><h3>Internet Services:</h3>
                 <p>Golden Networks offers high-speed and reliable internet connections for both residential and
                     business customers.We leverage the latest technologies to ensure uninterrupted connectivity 
-                    and exceptional browsingexperiences.<br><br><a href="#">Continue reading ></a>
+                    and exceptional browsingexperiences.<br><br><a href="#" onclick="linkClick()">Continue reading ></a>
                 </p>
             </div>
             <div id="cctv" class="reveal">
@@ -60,35 +60,35 @@
                 <p>
                     Our skilled technicians provide
                     professional CCTV installation services to enhance security
-                    and surveillance for homes,businesses,and public spaces.<br><br><a href="#">Continue reading ></a>
+                    and surveillance for homes,businesses,and public spaces.<br><br><a href="#" onclick="linkClick()">Continue reading ></a>
                 </p>
             </div>
             <div id="web" class="reveal">
                 <img src="images/Screenshot 2023-08-07 155436.png"><h3>Website Development and Hosting:</h3>
                 <p>
                     Golden Networks specializes increating visually appealing and functional
-                    websites for businesses,along with reliable hosting solutions.<br><br><a href="#">Continue reading ></a>
+                    websites for businesses,along with reliable hosting solutions.<br><br><a href="#" onclick="linkClick()">Continue reading ></a>
                 </p>
             </div>
             <div id="electrial" class="reveal">
                 <img src="images/Screenshot 2023-08-07 155631.png"><h3>Electrical and Electric Works:</h3>
                 <p>
                     We offer electrical installation and repair services to meet residential and
-                    commercial needs,ensuring safety and compliance.<br><br><a href="#">Continue reading ></a>
+                    commercial needs,ensuring safety and compliance.<br><br><a href="#" onclick="linkClick()">Continue reading ></a>
                 </p>
             </div>
             <div id="solar" class="reveal">
                 <img src="images/Screenshot 2023-08-07 155810.png"><h3>Solar Panel Installation:</h3>
                 <p>
                     With a commitment to renewable energy,we provide solar panel installation
-                    services to promote sustainable power solutions.<br><br><a href="#">Continue reading ></a>
+                    services to promote sustainable power solutions.<br><br><a href="#" onclick="linkClick()">Continue reading ></a>
                 </p>
             </div>
             <div id="gadgets" class="reveal">
                 <img src="images/Screenshot 2023-08-07 160042.png"><h3>Internet Equipment and Gadgets:</h3>
                 <p>
                     Golden Networks offers a wide range of high-quality internet equipment
-                    and gadgets to cater for various connectivity needs.<br><br><a href="#">Continue reading ></a>
+                    and gadgets to cater for various connectivity needs.<br><br><a href="#" onclick="linkClick()">Continue reading ></a>
                 </p>
             </div>
             <div id="telecommunication" class="reveal">
@@ -96,7 +96,7 @@
                 <p>
                     Our expertise extends to providing telecommunication
                     solutions and networking services for businesses,helping them stay connected and productive.
-                   <br><br><a href="#">Continue reading ></a>
+                   <br><br><a href="#" onclick="linkClick()">Continue reading ></a>
                 </p>
             </div>
         </div>
@@ -113,29 +113,29 @@
                 to the digital needs of individuals and businesses in the region. With a team of experienced 
                 and dedicated professionals, we take pride in our commitment to providing exceptional services and innovative technology solutions.
             </p>
-            <button id="CTA">Read More</button>
+            <button id="CTA" onclick="linkClick()">Read More</button>
         </div>
         <div id="aboutImages" class="reveal">
             <img src="images/Screenshot 2023-08-07 232112.png">
     </div>
 </section>
 <section class="reveal">
-    <div class="statistics">
+    <div class="statistics reveal">
         <!--statistics section-->
         <div id="years">
-            <img src="images/Screenshot 2023-08-09 003154.png"><h3>20</h3>
+            <img src="images/Screenshot 2023-08-09 003154.png"><h3>0</h3>
             <p>Years of Experience</p>
         </div>
         <div id="members">
-            <img src="images/Screenshot 2023-08-09 001937.png"><h3>100</h3>
+            <img src="images/Screenshot 2023-08-09 001937.png"><h3>0</h3>
             <p>Team Members</p>
         </div>
         <div id="satisfied">
-            <img src="images/Screenshot 2023-08-09 002032.png"><h3>2000</h3>
+            <img src="images/Screenshot 2023-08-09 002032.png"><h3>0</h3>
             <p>satisfied Clients</p>
         </div>
         <div id="projects">
-            <img src="images/Screenshot 2023-08-09 002234.png"><h3>1200</h3>
+            <img src="images/Screenshot 2023-08-09 002234.png"><h3>0</h3>
             <p>Complete Projects</p>
         </div>
     </div>
@@ -156,7 +156,7 @@
                     <li>Secure Streaming</li>
                 </ul>
             </p>
-            <button>View Plan</button>
+            <button onclick="linkClick()">View Plan</button>
         </div>
         <div id="business" class="reveal">
             <h2>$<span> 60.15 </span>/month</h2>
@@ -169,7 +169,7 @@
                     <li>Reliable Connectivity</li>
                 </ul>
             </p>
-            <button>View Plan</button>
+            <button onclick="linkClick()">View Plan</button>
         </div>
         <div id="premium" class="reveal">
             <h2>$<span> 353.98 </span>/month</h2>
@@ -182,7 +182,7 @@
                     <li>Reliable Connectivity</li>
                 </ul>
             </p>
-            <button>View Plan</button>
+            <button onclick="linkClick()">View Plan</button>
         </div>
         </div>
     </div>
@@ -201,7 +201,7 @@
                     Our electrical technical team had the priviledge of setting up and completing
                     the house wiring of one of our clients from Kapsabet.The full service was offered 
                     at a very pocket friendly cost, leaving our client satisfied and looking forward 
-                    to working with us in future.<a href="#">Continue reading</a>
+                    to working with us in future.<a href="#" onclick="linkClick()">Continue reading</a>
                 </p>
             </div>
             <div id="second" class="reveal">
@@ -209,21 +209,21 @@
                 <h3>Disk set up at Baraton</h3>
                 <p>
                     One of our clients from Baraton had his disk set up at cheap cost. We sell, deliver and 
-                    make set up the electric devices for our customers. You have nothing to worry about, our services are a phone away distance.<a href="#">Continue reading</a>
+                    make set up the electric devices for our customers. You have nothing to worry about, our services are a phone away distance.<a href="#" onclick="linkClick()">Continue reading</a>
                 </p>
             </div>
             <div id="third" class="reveal">
                 <img src="images/Screenshot 2023-08-07 232218.png">
                 <h3>Internet disk set up at Kapsabet Town</h3>
                 <p>
-                    Wifi installation is one of our greatest tasks. We deliver quality services as far as internet is concerned. One of our clients took advantage of this and this was his home wifi set up at Kapsabet town.<a href="#">Continue reading</a>
+                    Wifi installation is one of our greatest tasks. We deliver quality services as far as internet is concerned. One of our clients took advantage of this and this was his home wifi set up at Kapsabet town.<a href="#" onclick="linkClick()">Continue reading</a>
                 </p>
             </div>
             <div id="fourth" class="reveal">
                 <img src="images/Screenshot 2023-08-09 173208.png">
                 <h3>CCTV Installation at Chemundu, near Baraton</h3>
                 <p>
-                    We are a mobile company and will reach you where you are. All we require is direction to your place.This is another lucky customer that had his home equiped with cctv cameras. We set up the cameras and train our clients on how to use them. <a href="#">Continue reading</a>
+                    We are a mobile company and will reach you where you are. All we require is direction to your place.This is another lucky customer that had his home equiped with cctv cameras. We set up the cameras and train our clients on how to use them. <a href="#" onclick="linkClick()">Continue reading</a>
                 </p>
             </div>
         </div>
