make testimonial section funtional

--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
         <h2>~~ Testimonials ~~</h2>
         <p>This is what our esteem customers have to say about our services.</p>
         <div id="testimonial">
-            <h3>@Wilfred Mutwiri<br><span id="span">Customer</span></h3>
+            <h3><h4>@Ruth Wekesa</h4><br><span id="span">Customer</span></h3>
             <p>
                 I am a proud client of the Golden Networks. These guys know how to treat their customers and their services are just awesome!. Thank you Golden Networks, am forever grateful.
             </p>
-            <img src="images/Wilfred Passport.png">
-
+            <div id="image">
+            </div>
             <div id="Tbtns">
                 <button id="backBtn"><</button><button id="forwardBtn">></button>    
             </div>
@@ -302,10 +302,10 @@
             <p>You need not to struggle with lack of internet connection, especially during this time and age when internet is vital.</p>
             <h4>Get In Touch!</h4>
             <form>
-                <input type="text" name="name" id="name" placeholder="Your Name"><br>
-                <input type="email" name="email" id="email" placeholder="Your Email"><br>
-                <input type="number" name="number" id="phone" placeholder="Phone Number"><br>
-                <input type="text" name="text" id="text" placeholder="Message"><br>
+                <input type="text" name="name" id="name" placeholder="Your Name" required><br>
+                <input type="email" name="email" id="email" placeholder="Your Email" required><br>
+                <input type="number" name="number" id="phone" placeholder="Phone Number" required><br>
+                <input type="text" name="text" id="text" placeholder="Message" required><br>
             </form>
             <button>Send</button>
         </div>
